# mallocMC-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark1.p
include/: benchmark_1.config.hpp  benchmark_3.config.hpp  cmd_line.hpp  dout.hpp  macros.hpp  print_machine_readable.hpp
src/: benchmark_1.cu  benchmark_2.cu  benchmark_3.cu  create_benchmarks.sh  parse_results.cpp  submit_benchmark2_complete.sh  submit_device_128.sh  submit_device_log.sh  submit_mMc_128.sh  submit_mMc_log.sh  submit_scatter_128.sh  submit_scatter_log.sh
